Change SCSS import chain

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
 // @import 'partials/variables';
-@import 'bootstrap/bootstrap.scss';
+// @import 'bootstrap/bootstrap.scss';
 // @import 'partials/structure';
 // @import 'partials/type';
 // @import 'partials/header';
